# strands_agent

./: .gitignore  README.md  pyproject.toml
reports/daily/: report-2026-04-21.md  report-2026-04-22.md  report-2026-04-23.md  report-2026-04-24.md  report-2026-04-25.md  report-2026-04-26.md  report-2026-04-27.md  report-2026-04-28.md  report-2026-04-29.md  report-2026-04-30.md  report-2026-05-01.md  report-2026-05-02.md  report-2026-05-04.md
scripts/: approval_restart_smoke.py  approval_smoke.py  live_smoke.py  replay_smoke.py  session_picker_smoke.py  session_state_smoke.py  session_switcher_smoke.py  shell_tool_smoke.py
src/strands_agent_tui/: app.py  config.py  runtime.py
src/strands_agent_tui/sessions/: __init__.py  artifacts.py  picker.py
src/strands_agent_tui/steering/: __init__.py  policy.py
src/strands_agent_tui/tools/: __init__.py  workspace.py
tests/: test_app.py  test_runtime.py  test_sessions.py  test_smoke.py  test_tools.py
